--- a/Django/CSUProjects/templates/subProjects.html
+++ b/Django/CSUProjects/templates/subProjects.html
@@ -118,19 +118,19 @@
             <div class="grid mt-5 mb-5">
                 <div class="row gy-4 gx-0 justify-content-lg-between justify-content-center align-items-center">
                 {% for card in cards%}
-                    <div class="card shadow-lg rounded-4 border-2"
+                    <div class="card shadow-lg rounded-4 border-2 bg-body-tertiary"
                          id="{{card.sid}}"
                          style="max-width: 540px;">
                         <div class="d-flex text-center align-items-center">
                             <div class="card-body px-0">
-                                <h5 class="card-title pb-3 border-bottom border-2 fs-5">{{card.title}}</h5>
+                                <h5 class="card-title pb-3 border-bottom border-2 text-center fs-5 text-danger">{{card.title}}</h5>
                                 <div class="card-text collapse multiCollapse{{card.sid}}" id="collapse{{card.sid}} description{{card.sid}}">
                                     <table class="table table-striped table-borderless w-100">
                                         <thead class="align-middle px-5">
-                                            <th>Требования к студенту</th>
-                                            <th>Требуемые направления обучения</th>
+                                            <th>Навыки</th>
+                                            <th>Направления обучения</th>
                                         </thead>
-                                        <tbody class="align-middle fs-6">
+                                        <tbody class="align-middle fs-6 fw-semibold">
                                             {% for vacancy in vacancies %}
                                                 {% if vacancy.sid == card.sid %}
                                                     <tr>
@@ -142,7 +142,7 @@
                                         </tbody>
                                     </table>
                                 </div>
-                                <p class="card-text px-4 collapse show multiCollapse{{card.sid}} fs-6" id="description{{card.sid}}">{{card.description}}</p>
+                                <p class="card-text px-4 collapse show multiCollapse{{card.sid}} fs-6 fw-semibold" id="description{{card.sid}}">{{card.description}}</p>
                                 <div class="d-flex pt-3 pe-2 border-top border-1 justify-content-around">
                                     <button class="btn btn-sm btn-outline-dark rounded-3 lastBtn"
                                         type="button"
