upd: toast design

--- a/Django/CSUProjects/static/css/cinema.css
+++ b/Django/CSUProjects/static/css/cinema.css
@@ -39,7 +39,7 @@
   max-width: 100px;
   border-radius: 15%;
   margin: 15px auto 0;
-  box-shadow: 0 8px 20px -4px #95abbb;
+  box-shadow: -7px 7px 15px -3px rgb(220 53 69);
   width: 100px;
   height: 100px;
 }
