--- a/Django/CSUProjects/templates/cinema.html
+++ b/Django/CSUProjects/templates/cinema.html
@@ -4,7 +4,13 @@
 {% block cssAndScripts %}
     {% load static%}
 
-    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css'><link rel="stylesheet" href={% static "/css/cinema.css"%}>
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css'>
+    <link rel="stylesheet" href={% static "/css/cinema.css"%}>
+
+    <script src='https://code.jquery.com/jquery-2.2.4.min.js' defer></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js' defer></script>
+    <script  src={% static "/src/JScripts/toast.js" %} defer></script>
+    <script  src={% static "/src/JScripts/cinemaCarousel.js" %} defer></script>
     <script type="importmap">
         {
             "imports": {
@@ -101,12 +107,12 @@
 
     <section class="cinema-carousel pt-3">
         <h2 class="fs-1 text-center pb-2">{{project.title}}</h2>
-        <h4 class="pb-2 lead fs-4 text-center">{{project.description}}</h4>
+        <h4 class="p-4 lead fs-4 text-center">{{project.description}}</h4>
 
         <div class="owl-carousel owl-carousel1 owl-theme">
         {% for card in cards %}
             <div class="mb-5 ">
-                <div class="card text-center shadow-lg mx-4 rounded-4">
+                <div class="card text-center shadow-lg mx-4 rounded-4 bg-body-tertiary">
                     {% if card.wid.mediaExists %}
                         <img class="card-img-top" src= {{card.wid.photo.url}}>
                     {% else %}
@@ -114,7 +120,7 @@
                     {% endif %}
                     
                     <div class="card-body">
-                        <h3 class="text-danger h2"> {{card.wid.name}} <br />
+                        <h3 class="text-danger-subtle h2"> {{card.wid.name}} <br />
                         <h5 class="text-body-secondary fs-4"> {{card.post}} </h5>
                         </h3>
                         <p class="card-text text-start fw-normal fs-5 py-3">{{card.description}}</p>
@@ -126,23 +132,22 @@
     </section>
 
     <div aria-live="polite" aria-atomic="true" class="d-flex justify-content-end align-items-center w-100 sticky-bottom">
-        <div id="liveToast" class="toast align-items-center text-bg-secondary border-0  m-3 end-0" role="alert" aria-live="assertive" aria-atomic="true" data-bs-autohide="false">
+        <div id="liveToast" class="toast align-items-center bg-body-tertiary border-0  m-3 end-0" role="alert" aria-live="assertive" aria-atomic="true" data-bs-autohide="false">
             <div class="d-flex">
-              <div class="toast-body">
-                Телефон руководителя проект:<br/> 8(908)-484-57-80 <br/>
-                <a href="https://bootstrap-4.ru/docs/5.3/components/toasts/#placement">Ссылка на готовый проект</a>
+              <div class="toast-body fs-6">
+                Телефон руководителя:<br/> {{project.phone}}
+                {% if project.link%}
+                <br/>
+                <a class="link-danger link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" href="{{project.link}}">Ссылка на готовый проект</a>
+                {% endif %}
               </div>
-              <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Закрыть"></button>
+              <button type="button" class="btn btn-outline-danger me-2 m-auto border-0" data-bs-dismiss="toast" aria-label="Закрыть">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="24" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
+                    <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
+                </svg>
+            </button>
             </div>
         </div>
     </div>
 
-    <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js'></script><script  src={% static "/src/JScripts/cinemaCarousel.js" %}></script>
-
-    <script type="text/javascript">
-        const toastLiveExample = document.getElementById('liveToast')
-        const toastBootstrap = bootstrap.Toast.getOrCreateInstance(toastLiveExample)
-        toastBootstrap.show()
-    </script>
 {% endblock content %}
