fix: photo position into cards, logo position of preview, reformat text

--- a/Django/CSUProjects/templates/base.html
+++ b/Django/CSUProjects/templates/base.html
@@ -20,7 +20,7 @@
                 <h2 class="logo d-sm-flex d-none justify-content-center fs-1"><a class="navbar-brand nav-link active" id="title" href={% url 'main' %}>Проекты ЧелГУ.</a></h2>
             </div>
         {% endif %}
-        <div class="collapse navbar-collapse justify-content-md-end col-md-8 col-10 me-4" id="navbarNav">
+        <div class="collapse navbar-collapse justify-content-sm-end justify-content-center col-sm-8 col-10 me-4" id="navbarNav">
             <ul class="navbar-nav text-center align-items-center">
                 <li class="nav-item">
                     {% if template_name == 'index.html'%}
@@ -70,19 +70,19 @@
 
     <section id="contacts">
         {% if template_name == 'index.html'%}
-        <div class="container-fluid p-3">
-            <h1 class="fs-1 col text-start">Контакты</h1>
+        <div class="container-fluid mt-4 sticky-bottom pe-5">
+            <h1 class="fs-1 col text-start ps-3">Контакты</h1>
             <div class="row justify-content-center">
                 <div class="col-lg-3 col-6">
                     <h6 class="fw-normal fs-4 mt-3">Контакты</h6>
-                    <ul>
+                    <ul class="ps-2">
                         <li>Телефон: 8(351)799-71-01</li>
                         <li>Адрес: г. Челябинск, ул. Братьев Кашириных, д. 129</li>
                         <li>Почта: user@example.com</li>
                     </ul>
                 </div>
                 <div class="col-lg-3 col-4">
-                    <h6 class="fw-normal fs-4 mt-3">Продукты</h6>
+                    <h6 class="fw-normal fs-4 mt-3 ps-4">Продукты</h6>
                     <ul>
                         <li>
                             <a href="https://www.csu.ru/" class="link-body-emphasis opacity-75">Официальный сайт</a>
@@ -97,14 +97,14 @@
             <div class="row justify-content-center">
                 <div class="col-lg-3 col-6">
                     <h6 class="fw-normal fs-4 mt-3">Контакты</h6>
-                    <ul>
+                    <ul class="ps-2">
                         <li>Телефон: 8(351)799-71-01</li>
                         <li>Адрес: г. Челябинск, ул. Братьев Кашириных, д. 129</li>
                         <li>Почта: user@example.com</li>
                     </ul>
                 </div>
                 <div class="col-lg-3 col-4">
-                    <h6 class="fw-normal fs-4 mt-3">Продукты</h6>
+                    <h6 class="fw-normal fs-4 mt-3 ps-4">Продукты</h6>
                     <ul>
                         <li>
                             <a href="https://www.csu.ru/" class="link-body-emphasis opacity-75">Официальный сайт</a>
