upd: change button and text color

--- a/Django/CSUProjects/templates/base.html
+++ b/Django/CSUProjects/templates/base.html
@@ -85,7 +85,7 @@
                     <h6 class="fw-normal fs-4 mt-3 ps-4">Продукты</h6>
                     <ul>
                         <li>
-                            <a href="https://www.csu.ru/" class="link-body-emphasis opacity-75">Официальный сайт</a>
+                            <a href="https://www.csu.ru/" class="link-danger link-offset-2">Официальный сайт</a>
                         </li>
                     </ul>
                 </div>
@@ -107,7 +107,7 @@
                     <h6 class="fw-normal fs-4 mt-3 ps-4">Продукты</h6>
                     <ul>
                         <li>
-                            <a href="https://www.csu.ru/" class="link-body-emphasis opacity-75">Официальный сайт</a>
+                            <a href="https://www.csu.ru/" class="link-danger link-offset-2">Официальный сайт</a>
                         </li>
                     </ul>
                 </div>
