--- a/Django/CSUProjects/templates/index.html
+++ b/Django/CSUProjects/templates/index.html
@@ -197,7 +197,7 @@
                         <input name="search-text" class="form-control border-0 shadow-none" type="search" id="floatingSearch" placeholder="Поиск проекта" aria-label="Search">
                         <label for="floatingSearch">Поиск проекта</label>
                         <div class="vr"></div>
-                        <button class="btn border-0" type="submit">Поиск</button>
+                        <button class="btn border-0 text-danger" type="submit">Поиск</button>
                     </div>
                 </form>
             </div>
@@ -319,15 +319,15 @@
                         <p class="text-body-secondary fs-5">С гордостью объявляем, что наш хостинг поддерживает целое сообщество талантливых и преданных участников. Мы вдохновляем, обучаем и совершенствуемся вместе, создавая инновационные проекты, которые изменят мир.</p>
                         <div class="row mt-4 fs-5 justify-content-center text-xl-center text-start">
                             <div class="col-xl-4">
-                                <span class="lead fs-4 text-danger">Участников</span><div class="d-xl-block d-none"></div>
+                                <span class="lead fs-4 fw-normal text-danger">Участников</span><div class="d-xl-block d-none"></div>
                                 <span>{{wcount}}</span>
                             </div>
                             <div class="col-xl-4">
-                                <span class="lead fs-4 text-danger">Проектов</span><div class="d-xl-block d-none"></div>
+                                <span class="lead fs-4 fw-normal text-danger">Проектов</span><div class="d-xl-block d-none"></div>
                                 <span>{{pcount}}</span>
                             </div>
                             <div class="col-xl-4">
-                                <span class="lead fs-4 text-danger">Выполненных проектов</span><div class="d-xl-block d-none"></div>
+                                <span class="lead fs-4 fw-normal text-danger">Выполненных проектов</span><div class="d-xl-block d-none"></div>
                                 <span>{{cpcount}}</span>
                             </div>
                         </div>
@@ -352,7 +352,7 @@
                                 <p class="card-text d-lg-block d-none pb-5 fs-6 text-start">Мы гордимся результатами творчества и инноваций в нашем университетском сообществе. Исследуйте наши успешно завершенные проекты, каждый из которых стал уникальным вкладом в наше общее научное и творческое наследие. Открывайте для себя идеи, вдохновляйтесь достижениями других участников, и подготовьтесь к собственным ярким шагам в мире инноваций.</p>
                                 <p class="card-text d-lg-none d-block pb-5 fs-6">Здесь мы гордимся результатами творчества и инноваций в нашем университетском сообществе. Исследуйте наши успешно завершенные проекты, каждый из которых стал уникальным вкладом в наше общее научное и творческое наследие.</p>
                                 <div class="position-absolute bottom-0 start-50 translate-middle-x pb-3">
-                                    <a class="btn btn-outline-dark rounded-3 lastBtn" href={% url 'completedProjects' %}>Выполненные проекты</a>
+                                    <a class="btn btn-outline-danger rounded-3 fw-semibold lastBtn" href={% url 'completedProjects' %}>Выполненные проекты</a>
                                 </div>
                             </div>
                         </div>
@@ -364,7 +364,7 @@
                             <p class="card-text d-lg-block d-none pb-5 fs-6 text-start">Это ваше пространство для творчества и инноваций! Нажмите на кнопку "Предложить свои проекты", чтобы внести свой вклад в уникальную мозаику идей и исследований нашего университетского хостинга. Здесь ваше видение может стать реальностью, а ваш проект - частью нашей вдохновляющей истории. Давайте вместе строить будущее, наполненное творчеством и инновациями!</p>
                             <p class="card-text d-lg-none d-block pb-5 fs-6">Это ваше пространство для творчества и инноваций! Нажмите на кнопку "Предложить свои проекты", чтобы внести свой вклад в уникальную мозаику идей и исследований нашего университетского хостинга.</p>
                             <div class="position-absolute bottom-0 start-50 translate-middle-x pb-3">
-                                <button type="button" class="btn btn-outline-dark rounded-3 lastBtn" data-bs-toggle="modal" data-bs-target="#invite-prj">
+                                <button type="button" class="btn btn-outline-danger rounded-3 fw-semibold lastBtn" data-bs-toggle="modal" data-bs-target="#invite-prj">
                                     Предложить проект
                                 </button>
                             </div>
@@ -411,7 +411,7 @@
                     </div>
                 </div>
                 <div class="modal-footer justify-content-center border-0">
-                    <button type="submit" class="btn btn-outline-dark rounded-3 col modalBtn">Отправить</button>
+                    <button type="submit" class="btn btn-outline-danger rounded-3 col fw-semibold modalBtn">Отправить</button>
                 </div>
             </form>
         </div>
