fix: cleaned up unused classes in html, removed unused code

--- a/Django/CSUProjects/templates/subProjects.html
+++ b/Django/CSUProjects/templates/subProjects.html
@@ -144,7 +144,7 @@
                                 </div>
                                 <p class="card-text px-4 collapse show multiCollapse{{card.sid}} fs-6 fw-semibold" id="description{{card.sid}}">{{card.description}}</p>
                                 <div class="d-flex pt-3 pe-2 border-top border-1 justify-content-around">
-                                    <button class="btn btn-sm btn-outline-danger rounded-3 lastBtn"
+                                    <button class="btn btn-sm btn-outline-danger rounded-3"
                                         type="button"
                                         data-bs-toggle="collapse"
                                         data-bs-target=".multiCollapse{{card.sid}}"
@@ -153,7 +153,7 @@
                                     Доступные вакансии
                                     </button>
                                     <button type="button"
-                                            class="btn btn-sm btn-outline-danger rounded-3 lastBtn"
+                                            class="btn btn-sm btn-outline-danger rounded-3"
                                             data-bs-toggle="modal"
                                             data-bs-target="#invite-prj">
                                             Записаться
@@ -215,7 +215,7 @@
                         </div>
                     </div>
                     <div class="modal-footer justify-content-center border-0">
-                        <button type="submit" class="btn btn-outline-danger rounded-3 col fw-semibold modalBtn">Записаться</button>
+                        <button type="submit" class="btn btn-outline-danger rounded-3 col fw-semibold">Записаться</button>
                     </div>
                 </form>
             </div>
