--- a/Django/CSUProjects/templates/pages/cinema.html
+++ b/Django/CSUProjects/templates/pages/cinema.html
@@ -20,8 +20,16 @@
 {% block content %}
 
     <section class="cinema-carousel pt-3">
+        <div class="position-absolute end-0 pe-4">
+            <a href={% url 'completedProjects' %}#projects class="btn btn-outline-danger border-0">
+                <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-box-arrow-left" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M6 12.5a.5.5 0 0 0 .5.5h8a.5.5 0 0 0 .5-.5v-9a.5.5 0 0 0-.5-.5h-8a.5.5 0 0 0-.5.5v2a.5.5 0 0 1-1 0v-2A1.5 1.5 0 0 1 6.5 2h8A1.5 1.5 0 0 1 16 3.5v9a1.5 1.5 0 0 1-1.5 1.5h-8A1.5 1.5 0 0 1 5 12.5v-2a.5.5 0 0 1 1 0z"/>
+                    <path fill-rule="evenodd" d="M.146 8.354a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L1.707 7.5H10.5a.5.5 0 0 1 0 1H1.707l2.147 2.146a.5.5 0 0 1-.708.708z"/>
+                </svg>
+            </a>
+        </div>
         <h2 class="fs-1 text-center pb-2">{{project.title}}</h2>
-        <h4 class="p-4 lead fs-4 text-center">{{project.description}}</h4>
+        <h4 class="p-4 lead fs-4 text-center fw-semibold">{{project.description}}</h4>
 
         <div class="owl-carousel owl-carousel1 owl-theme">
         {% for card in cards %}
