fix: cleared unused pages

--- a/Django/CSUProjects/templates/pages/index.html
+++ b/Django/CSUProjects/templates/pages/index.html
@@ -196,7 +196,7 @@
                                 <p class="card-text d-lg-block d-none pb-5 fs-6 text-start">Мы гордимся результатами творчества и инноваций в нашем университетском сообществе. Исследуйте наши успешно завершенные проекты, каждый из которых стал уникальным вкладом в наше общее научное и творческое наследие. Открывайте для себя идеи, вдохновляйтесь достижениями других участников, и подготовьтесь к собственным ярким шагам в мире инноваций.</p>
                                 <p class="card-text d-lg-none d-block pb-5 fs-6">Здесь мы гордимся результатами творчества и инноваций в нашем университетском сообществе. Исследуйте наши успешно завершенные проекты, каждый из которых стал уникальным вкладом в наше общее научное и творческое наследие.</p>
                                 <div class="position-absolute bottom-0 start-50 translate-middle-x pb-3">
-                                    <a class="btn btn-outline-danger rounded-3 fw-semibold lastBtn" href={% url 'completedProjects' %}>Выполненные проекты</a>
+                                    <a class="btn btn-outline-danger rounded-3 fw-semibold" href={% url 'completedProjects' %}>Выполненные проекты</a>
                                 </div>
                             </div>
                         </div>
@@ -208,7 +208,7 @@
                             <p class="card-text d-lg-block d-none pb-5 fs-6 text-start">Это ваше пространство для творчества и инноваций! Нажмите на кнопку "Предложить свои проекты", чтобы внести свой вклад в уникальную мозаику идей и исследований нашего университетского хостинга. Здесь ваше видение может стать реальностью, а ваш проект - частью нашей вдохновляющей истории. Давайте вместе строить будущее, наполненное творчеством и инновациями!</p>
                             <p class="card-text d-lg-none d-block pb-5 fs-6">Это ваше пространство для творчества и инноваций! Нажмите на кнопку "Предложить свои проекты", чтобы внести свой вклад в уникальную мозаику идей и исследований нашего университетского хостинга.</p>
                             <div class="position-absolute bottom-0 start-50 translate-middle-x pb-3">
-                                <button type="button" class="btn btn-outline-danger rounded-3 fw-semibold lastBtn" data-bs-toggle="modal" data-bs-target="#invite-prj">
+                                <button type="button" class="btn btn-outline-danger rounded-3 fw-semibold" data-bs-toggle="modal" data-bs-target="#invite-prj">
                                     Предложить проект
                                 </button>
                             </div>
@@ -256,7 +256,7 @@
                     </div>
                 </div>
                 <div class="modal-footer justify-content-center border-0">
-                    <button type="submit" class="btn btn-outline-danger rounded-3 col fw-semibold modalBtn">Отправить</button>
+                    <button type="submit" class="btn btn-outline-danger rounded-3 col fw-semibold">Отправить</button>
                 </div>
             </form>
         </div>
